--- a/GuessTheNumber/style.css
+++ b/GuessTheNumber/style.css
@@ -112,8 +112,13 @@ h1 {
 .message {
   margin-bottom: 8rem;
   height: 3rem;
+  font-size: 30px;
 }
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+.label-tries {
+  margin-top: 2rem;
 }
