--- a/GuessTheNumber/style.css
+++ b/GuessTheNumber/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 
 * {
   margin: 0;
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'Black Ops One', sans-serif;
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
@@ -23,6 +23,11 @@ header {
   position: relative;
   height: 35vh;
   border-bottom: 7px solid #eee;
+  font-size: 100px;
+}
+
+.header {
+  font-size: 70px;
 }
 
 main {
