--- a/dom_manipulation/exercise5/styles.css
+++ b/dom_manipulation/exercise5/styles.css
@@ -1,4 +1,8 @@
 
+  body {
+    text-align: center;
+  }
+
     #container {
       width: 226px;
       height: 274px;
@@ -20,4 +24,10 @@
     }
     .t4 {
       width: 219px;
+    }
+
+
+    button {
+      margin-top: 10px;
+      font-size: 16px;
     }
